--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ VITE_SITE_NAME = "诺" # 名称
 VITE_SITE_ANTHOR = "無名" # 作者
 VITE_SITE_KEYWORDS = "诺,个人主页" # 关键词
 VITE_SITE_DES = "主页" # 站点简介
-VITE_SITE_URL = "www.wzc.pub" # 站点地址
+VITE_SITE_URL = "诺" # 站点地址
 VITE_SITE_LOGO = "/images/icon/favicon.ico" # 站点主图标
 VITE_SITE_MAIN_LOGO = "/images/icon/logo.png" # 主页图标
 VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png" # Apple 端图标
 
 # 简介文本
 VITE_DESC_HELLO = "Hello World !"
-VITE_DESC_TEXT = "一个建立于 21 世纪的小站，存活于互联网的边缘"
+VITE_DESC_TEXT = "尚好的青春里 别太难为自己"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
@@ -42,7 +42,7 @@ VITE_SITE_ICP = ""
 ## 此处提供的服务可能会超量从而无法访问，请自行部署
 ## 若使用 QQ 音乐歌单，歌曲数量最好不要超出 50 首
 ## 备用：https://api.wuenci.com/meting/api/
-VITE_SONG_API = "https://api-meting.imsyy.top/api"
+VITE_SONG_API = "http://121.37.134.233:6601/"
 # 歌曲服务器 ( netease-网易云, tencent-qq音乐 )
 VITE_SONG_SERVER = "netease"
 # 播放类型 ( song-歌曲, playlist-播放列表, album-专辑, search-搜索, artist-艺术家 )
